--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Dimension by HTML5 UP</title>
+		<title>Uchechukwu Madukwe - Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -20,13 +20,19 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<span class="icon fa-gem"></span>
+							<span class="icon">
+								<img src="/images/Uche.jpeg" alt="Logo" />
+							</span>
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Dimension</h1>
-								<p>A fully responsive site template designed by <a href="https://html5up.net">HTML5 UP</a> and released<br />
-								for free under the <a href="https://html5up.net/license">Creative Commons</a> license.</p>
+								<h1>Uchechukwu Madukwe</h1>
+								<h2>Backend Developer</h2>
+								<p>I'm a passionate backend developer who loves turning ideas into powerful, 
+									reliable systems behind the scenes. With a strong foundation in JavaScript, 
+									Node.js, Express.js, and MongoDB, I specialize in creating RESTful APIs, 
+									designing efficient database schemas, and 
+									building server-side logic that scales.</p>
 							</div>
 						</div>
 						<nav>
@@ -47,8 +53,10 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#work">awesome work</a>.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
+								<p>Hi, I'm Uche — a backend developer passionate about building efficient, scalable, and secure server-side systems.</a>.</p>
+								<p>With hands-on experience in Node.js, Express.js, and MongoDB, I’ve contributed to real-world projects like EliteCab, a ride-sharing platform designed for smarter urban transportation.</p>
+								<p>My expertise lies in creating RESTful APIs, designing efficient database schemas, and implementing server-side logic that scales. I thrive on challenges and am always eager to learn new technologies to enhance my skill set.</p>
+								<p>When I'm not coding, you can find me exploring the latest tech trends, contributing to open-source projects, or diving into a good book. Let's connect and explore how we can collaborate on exciting projects!</p>	
 							</article>
 
 						<!-- Work -->
