updated EmailJS for sending emails.

--- a/index.html
+++ b/index.html
@@ -82,19 +82,7 @@
 										<li>Developed user authentication, trip scheduling, and driver-passenger matching features.</li>
 										<li>Collaborated in an agile team to create a cost-effective, multi-passenger ride-sharing system.</li>
 									  </ul>
-									  <a href="https://github.com/yourusername/elitecab" class="project-btn" target="_blank"><i class="fab fa-github"></i> View Project</a>
-									</div>
-								
-									<div class="project">
-									  <h3><i class="fas fa-user-check"></i> Vetly – Talent Vetting System</h3>
-									  <p><strong>Role:</strong> Backend Engineer | Ayagigs (2022 – 2023)</p>
-									  <p><strong>Tech Stack:</strong> Node.js, Express.js, MongoDB, GitHub</p>
-									  <ul>
-										<li>Designed and implemented core backend architecture for automated talent vetting.</li>
-										<li>Integrated smart contract logic and third-party services with frontend and product design teams.</li>
-										<li>Improved API performance and data handling.</li>
-									  </ul>
-									  <a href="https://github.com/yourusername/elitecab" class="project-btn" target="_blank"><i class="fab fa-github"></i> View Project</a>
+									  <a href="https://github.com/OtegaClinton/EliteCab.git" class="project-btn" target="_blank"><i class="fab fa-github"></i> View Project</a>
 									</div>
 								
 									<div class="project">
@@ -127,7 +115,7 @@
 										<li>Consumed and displayed data from the public Star Wars API in a responsive single-page app.</li>
 										<li>Showcased dynamic rendering of character details like name, age, and height.</li>
 									  </ul>
-									  <a href="https://github.com/yourusername/elitecab" class="project-btn" target="_blank"><i class="fab fa-github"></i> View Project</a>
+									  <a href="https://github.com/Babaurch/STAR-WARS-CHARACTERS.git" class="project-btn" target="_blank"><i class="fab fa-github"></i> View Project</a>
 									</div>
 								  </section>
 								</div>
@@ -137,8 +125,19 @@
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
-								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
+								<span class="image main"><img src="/images/pic03.jpg" alt="" /></span>
+								<p>
+								Hey, I’m Uche — a backend developer who loves making things work behind the scenes.
+								</p>
+								<p>
+								My journey into tech started from a background in Microbiology (yup, really), but I found my true passion in solving problems with code. Now, I spend my time building clean, scalable backend systems using <strong>Node.js, Express, MongoDB</strong>, and other cool tools.
+								</p>
+								<p>
+								Whether I’m designing RESTful APIs, managing databases, or collaborating with a team to bring a project to life, I care about doing solid work that actually works. I recently wrapped up a backend dev program at <strong>Sail Innovation Lab</strong>, where I helped build <strong>EliteCab</strong> — a ride-sharing platform focused on smarter transport.
+								</p>
+								<p>
+								Outside of code, I enjoy exploring new ideas in tech communities, sharing knowledge, and constantly learning. Let’s build something meaningful!
+								</p>
 							</article>
 
 						<!-- Contact -->
@@ -148,15 +147,15 @@
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Name</label>
-											<input type="text" name="name" id="name" />
+											<input type="text" name="name" id="name" required />
 										</div>
 										<div class="field half">
 											<label for="email">Email</label>
-											<input type="text" name="email" id="email" />
+											<input type="email" name="email" id="email" required />
 										</div>
 										<div class="field">
 											<label for="message">Message</label>
-											<textarea name="message" id="message" rows="4"></textarea>
+											<textarea name="message" id="message" rows="4" required ></textarea>
 										</div>
 									</div>
 									<ul class="actions">
@@ -432,6 +431,9 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+			<script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+			<script src="/assets/js/emailJS.js"></script>
+
 
 	</body>
 </html>
